--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
   <title>46 Online Meet Waiting Room</title>
+
+  <!-- Meta descriptions -->
+  <meta name="description"
+    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta name="description" lang="ja" content="Fortune Music の 46 オンライン ミート イベント専用待機室。ライブ統計を確認し、世界中のファンと繋がりましょう。" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <meta property="og:title" content="46 Online Meet Waiting Room | Fortune Music" />
+  <meta property="og:description"
+    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta property="og:image" content="https://web-fortunemusic-waiting-room.pages.dev/logo.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <meta property="twitter:title" content="46 Online Meet Waiting Room | Fortune Music" />
+  <meta property="twitter:description"
+    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LV8MY8RLD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-6LV8MY8RLD');
+  </script>
+
   <script type="module" src="./frontend.tsx" async></script>
 </head>
 
