--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
-  <title>46 Online Meet Waiting Room</title>
 
-  <!-- Meta descriptions -->
+  <!-- SEO Meta Tags -->
+  <title>46◢ Online Meet Waiting Room | Sakamichi 46 Events</title>
   <meta name="description"
-    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
-  <meta name="description" lang="ja" content="Fortune Music の 46 オンライン ミート イベント専用待機室。ライブ統計を確認し、世界中のファンと繋がりましょう。" />
+    content="Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta name="keywords"
+    content="46, Sakamichi, online meet, waiting room, idol events, Nogizaka46, 乃木坂46, Sakurazaka46, 桜坂46, Hinatazaka46, 日向坂46, virtual events, オンラインミート, ミグリト" />
+  <meta name="author" content="46 Online Meet" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+
+  <!-- Language Alternates -->
+  <link rel="alternate" hreflang="en" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <link rel="alternate" hreflang="ja" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <link rel="alternate" hreflang="x-default" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
-  <meta property="og:title" content="46 Online Meet Waiting Room | Fortune Music" />
+  <meta property="og:title" content="46◢ Online Meet Waiting Room" />
   <meta property="og:description"
-    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
-  <meta property="og:image" content="https://web-fortunemusic-waiting-room.pages.dev/logo.svg" />
+    content="Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta property="og:image" content="https://web-fortunemusic-waiting-room.pages.dev/assets/logo.svg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="ja_JP" />
+  <meta property="og:site_name" content="46◢ Online Meet" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
-  <meta property="twitter:title" content="46 Online Meet Waiting Room | Fortune Music" />
-  <meta property="twitter:description"
-    content="Join the Fortune Music waiting room for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <meta name="twitter:title" content="46◢ Online Meet Waiting Room" />
+  <meta name="twitter:description"
+    content="Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
+  <meta name="twitter:image" content="https://web-fortunemusic-waiting-room.pages.dev/assets/logo.svg" />
+  <meta name="twitter:image:alt" content="46◢ Online Meet Waiting Room Logo" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "46◢ Online Meet Waiting Room",
+    "description": "Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide.",
+    "url": "https://status.meet.oshi-katsu.app/",
+    "applicationCategory": "EntertainmentApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "JPY"
+    },
+    "inLanguage": ["en", "ja"],
+    "audience": {
+      "@type": "Audience",
+      "audienceType": "Fans of Nogizaka46, Sakurazaka46, Hinatazaka46 groups"
+    }
+  }
+  </script>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6LV8MY8RLD"></script>
