fix: update canonical and alternate URLs to reflect the new status page

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
   <meta name="theme-color" content="#000000" />
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <link rel="canonical" href="https://status.meet.oshi-katsu.app" />
 
   <!-- Language Alternates -->
-  <link rel="alternate" hreflang="en" href="https://web-fortunemusic-waiting-room.pages.dev/" />
-  <link rel="alternate" hreflang="ja" href="https://web-fortunemusic-waiting-room.pages.dev/" />
-  <link rel="alternate" hreflang="x-default" href="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <link rel="alternate" hreflang="en" href="https://status.meet.oshi-katsu.app" />
+  <link rel="alternate" hreflang="ja" href="https://status.meet.oshi-katsu.app" />
+  <link rel="alternate" hreflang="x-default" href="https://status.meet.oshi-katsu.app" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
@@ -32,11 +32,11 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <meta property="og:url" content="https://status.meet.oshi-katsu.app" />
   <meta property="og:title" content="46◢ Online Meet Waiting Room" />
   <meta property="og:description"
     content="Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
-  <meta property="og:image" content="https://web-fortunemusic-waiting-room.pages.dev/assets/logo.svg" />
+  <meta property="og:image" content="https://status.meet.oshi-katsu.appassets/logo.svg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:locale" content="en_US" />
@@ -45,11 +45,11 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://web-fortunemusic-waiting-room.pages.dev/" />
+  <meta name="twitter:url" content="https://status.meet.oshi-katsu.app" />
   <meta name="twitter:title" content="46◢ Online Meet Waiting Room" />
   <meta name="twitter:description"
     content="Join the Sakamichi Online Meet for exclusive 46 online meet events. Track live statistics and connect with fellow fans worldwide." />
-  <meta name="twitter:image" content="https://web-fortunemusic-waiting-room.pages.dev/assets/logo.svg" />
+  <meta name="twitter:image" content="https://status.meet.oshi-katsu.appassets/logo.svg" />
   <meta name="twitter:image:alt" content="46◢ Online Meet Waiting Room Logo" />
 
   <!-- Structured Data (JSON-LD) -->
